--- a/css/main.css
+++ b/css/main.css
@@ -517,10 +517,12 @@ header {
 
 body .work-items {
     margin-top: 100px;
+    overflow: auto;
 }
 
 .work-items-section {
     padding-bottom: 40px;
+    vertical-align: top;
 }
 
 @media (min-width: 750px) {
@@ -537,15 +539,17 @@ body .work-items {
     }
 }
 
-.work-items-section li {
-    line-height: 40px;
-}
-
-.work-items-section li a {
+.work-items-section ul li a {
     display: block;
+    line-height: 40px;
+    padding-left: 50px;
 }
 
-.work-items-section li a i {
+.work-items-section ul li:first-child {
+    padding: 10px 0;
+}
+
+.work-items-section ul li a i {
     background-image: none;
     display: inline;
     position: inherit;
